Fix sub-site overflow

--- a/base/src/scss/_sub-sitenav.scss
+++ b/base/src/scss/_sub-sitenav.scss
@@ -1,4 +1,11 @@
 // sub header
+html:has(body.is-in-subsite) {
+  overflow-x: hidden;
+}
+
+body.is-in-subsite {
+  overflow-x: hidden;
+}
 
 .subsite-container {
   display: flex;
